--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'com.h2database', name: 'h2', version: '1.4.+'
 }
